[gd_scene load_steps=3 format=3 uid="uid://bgc2y5caf27w8"]

[ext_resource type="Script" uid="uid://ca2x0wo5egoio" path="res://scenes/ui/EnhancementScreen.gd" id="1"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2"]

[node name="EnhancementScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.08, 0.12, 1)

[node name="ItemSelectorPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -300.0
offset_right = 320.0
offset_bottom = 300.0
grow_vertical = 2

[node name="Title" type="Label" parent="ItemSelectorPanel"]
layout_mode = 2
text = "Eşya Seç"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ItemSelectorPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="ItemSelectorPanel/ScrollContainer"]
layout_mode = 2
columns = 3

[node name="EnhancementPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="EnhancementPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="EnhancementPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "⚡ GELİŞTİRME"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="EnhancementPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SelectedItem" type="Label" parent="EnhancementPanel/VBox"]
layout_mode = 2
text = "Eşya seçilmedi"
horizontal_alignment = 1

[node name="CurrentLevel" type="Label" parent="EnhancementPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Current: +0 → +1"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="EnhancementPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SuccessChance" type="Label" parent="EnhancementPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Success Chance: 100%"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="EnhancementPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RuneLabel" type="Label" parent="EnhancementPanel/VBox"]
layout_mode = 2
text = "Rün Seç:"

[node name="RuneSelector" type="OptionButton" parent="EnhancementPanel/VBox"]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "Rünsüz (+0%)"
popup/item_0/id = 0
popup/item_1/text = "Temel Rün (+5%)"
popup/item_1/id = 1
popup/item_2/text = "Gelişmiş Rün (+10%)"
popup/item_2/id = 2
popup/item_3/text = "Üstün Rün (+20%)"
popup/item_3/id = 3
popup/item_4/text = "Efsanevi Rün (+30%)"
popup/item_4/id = 4

[node name="Spacer4" type="Control" parent="EnhancementPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CostLabel" type="Label" parent="EnhancementPanel/VBox"]
layout_mode = 2
text = "Cost: 100 gold"
horizontal_alignment = 1

[node name="Spacer5" type="Control" parent="EnhancementPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="EnhanceButton" type="Button" parent="EnhancementPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "⚡ GELİŞTİR"

[node name="ResultPopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="ResultPopup"]
layout_mode = 2

[node name="ResultText" type="Label" parent="ResultPopup/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SUCCESS!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="ResultPopup/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="ResultPopup/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Kapat"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "◀ Geri"
